# tsptools

./: README.md
tspgen/: .gitignore  Cargo.toml
tspgen/src/: main.rs
tsprandom/: .gitignore  Cargo.toml  local_optime.txt  test.txt  vis.py  vis_basic.py
tsprandom/prez_backup/ulysses16/: u16hc.txt
tsprandom/src/: gen_graph.rs  main.rs  simpleparser.rs
tsptools/: Cargo.toml
tsptools/src/: algorithms.rs  helpers.rs  lib.rs  parsers.rs
tsptools/src/algorithms/: hillclimb.rs  two_opt.rs
