[package]
name = "tsprandom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsptools = { path = "../tsptools" }
rustc-hash = "1.1.0"
chrono = "0.4.23"
rand = { version = "0.8.5", features = ['small_rng'] }
rand_chacha = { version = "0.3.1", features = ['simd'] }
plotters = "0.3.4"

